--- a/views/home.jade
+++ b/views/home.jade
@@ -1,12 +1,12 @@
 html
   head
-    title='Pluralsight Rocks'
+    title='NAGP Assignment'
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
   body
     div.container
       div.jumbotron
-        h1 Hello Pluralsighters!!!
-        p Click the button below to head over to my podcast...
+        h1 Hello Tutor!!!
+        p Click the button below to head over to see me on linked in...
         p 
-          a.btn.btn-primary(href="http://intechwetrustpodcast.com") Podcast
+          a.btn.btn-primary(href="http://www.linkedin.com/in/vibhu-khurana007") Google
         p
