home file updated

--- a/views/home.jade
+++ b/views/home.jade
@@ -8,5 +8,5 @@ html
         h1 Hello Tutor!!!
         p Click the button below to head over to see me on linked in...
         p 
-          a.btn.btn-primary(href="http://www.linkedin.com/in/vibhu-khurana007") Google
+          a.btn.btn-primary(href="http://www.linkedin.com/in/vibhu-khurana007") View on LinkedIn
         p
