--- a/views/home.jade
+++ b/views/home.jade
@@ -5,7 +5,7 @@ html
   body
     div.container
       div.jumbotron
-        h1 Hello Tutor!!!
+        h1 Hello Tutor testing changes!!!
         p Click the button below to head over to see me on linked in...
         p 
           a.btn.btn-primary(href="http://www.linkedin.com/in/vibhu-khurana007") View on LinkedIn
